# faro

./: .gitignore  00_NoStim.ipynb  00_NoStim_OmeZarr.ipynb  01_full_FOV_stimulation_ERK_Jungfrau_w_optocheck.ipynb  01_full_FOV_stimulation_ERK_ramp_v2.ipynb  01_full_FOV_stimulation_ERK_w_optocheck.ipynb  01_full_FOV_stimulation_ERK_w_ramp_same_fov.ipynb  01_full_FOV_stimulation_ERK_w_ramp_same_fov_pause.ipynb  01_full_FOV_stimulation_ERK_w_ramp_w_optocheck.ipynb  02_CellMigration.ipynb  02_CellMigration_Mic.ipynb  02_CellMigration_simulated.ipynb  02_full_FOV_stimulation_simulated.ipynb  03_LineStimulation.ipynb  04_full_FOV_stimulation_ERK_new_API copy.ipynb  04_full_FOV_stimulation_ERK_new_API.ipynb  10_BO_Optimisation.ipynb  11_BO_Optimisation_Protrusions.ipynb  99_Manual_Re_analysis.ipynb  Legacy_01_full_FOV_stimulation_ERK_w_ramp_different_fovs.ipynb  MIGRATION_GUIDE.md  README.md  pyproject.toml
.claude/: settings.local.json
experiments/02_demo_sim_optogenetic/: demo_sim_optogenetic.ipynb
experiments/11_erk_experiments_full_fov_stim/: erk_full_fov_stim.ipynb  erk_full_fov_stim_updated.ipynb  legacy_erk_ramp.ipynb
experiments/31_bo_optimisation/: apply_oscillation_classifier_v2.py  bo_erk_oscillation.ipynb  bo_erk_oscillation_botorch.ipynb  bo_migration.ipynb  bo_protrusions.ipynb  calib_plate_96.json  compare_backends.ipynb  demo_bo_migration.ipynb  oscillation_model.joblib  oscillation_model_60min.joblib  replay_botorch.ipynb  (+8 more)
rtm_pymmcore/: controller.py  data_structures.py  dmd.py  img_processing_pip.py  utils.py
tests/: test_contracts.py  test_pipeline_integration.py
viewer/: 01_ERK-KTR_viewer.py
(+86 files in other folders)
