[project]
name = "rtm-pymmcore"
version = "1.0.0"
description = "Real-time feedback control microscopy using pymmcore as interface "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "pyarrow",
    "ipykernel",
    "ipywidgets",
    "matplotlib",
    "napari[Pyqt6]",
    "scikit-image",
    "tifffile",
    "pymmcore-plus>=0.17.3",
    "pymmcore-widgets",
    "trackpy",
    "napari-micromanager",
    "imaging-server-kit",
    "ome-writers",
    "zarr>=3",
]

[project.optional-dependencies]

stardist = [
    "stardist",
    "tensorflow",
    "csbdeep",
    ]

cellpose = [
    "cellpose",
    "torch",
    ]

convpaint = [
    "napari-convpaint",
    "scipy"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
napari-micromanager = { git = "https://github.com/pymmcore-plus/napari-micromanager" }
